fixed alignment, updated styles

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .choice-div{
     display:flex;
-    justify-content:space-around;
+    justify-content:center;
     align-items:center;
     /*background:blue;*/
     width:100%;
@@ -14,13 +14,14 @@
   .score-div{
     display:flex;
     flex-direction: column;
-    justify-content:space-around;
+    justify-content:center;
     align-items:center;
     /*background:red;*/
-    width:100%;
+    width:500px;
+    margin:auto;
     height:100%;
     /*border:red dashed;*/
-    margin:0 0 0 0;
+    /*margin-left: 100px;*/
     font-size:30px;
     font-weight:bold;
 
@@ -31,15 +32,16 @@
   
   
   .button-div{
-    padding:20px;
+    padding:50px;
     display:flex;
     justify-content:space-around;
     align-items:center;
     /*background:yellow;*/
-    width:100%;
+    width:800px;
     height:100%;
+    margin:auto;
     /*border:green dashed;*/
-    margin:0 0 0 0;
+    /*margin:0 0 0 0;*/
   }
   
   
@@ -69,6 +71,9 @@
   button {
     font-size:30px;
     padding:20px;
+    background-color: lightgray;
+    border-radius: 25px;
+    border: 2px solid black;
   }
 
 
